--- a/package.json
+++ b/package.json
@@ -8,14 +8,13 @@
     "url": "https://github.com/docluv/backpack/LICENSE"
   },
   "devDependencies": {
-		"grunt" :                       "~0.4.*",
-		"grunt-contrib-cssmin":         "*",
-		"grunt-contrib-qunit":         "*",
-		"grunt-contrib-jshint":         "*",
-		"grunt-contrib-uglify":         "*",
-        "grunt-contrib-watch":         "*",
-        "grunt-bump":                   "*",
-		"matchdep":                     "*"
-
+    "grunt": "*",
+    "grunt-contrib-cssmin": "*",
+    "grunt-contrib-qunit": "*",
+    "grunt-contrib-jshint": "*",
+    "grunt-contrib-uglify": "*",
+    "grunt-contrib-watch": "*",
+    "grunt-bump": "*",
+    "matchdep": "*"
   }
 }
